@@ -1,25 +1,43 @@
 <?php
 /*
  * loadGameBox.php is a required module for board18BoxLoad.php.
+ * It is also a required module for the utility massLoadBoxes.php.
+ * The doLoad function does most of the work but it is only called
+ * by one of the other two functions in the loadGameBox.php module.
+ * The loadBox function sets up doLoad when running on a web server.
+ * The nextBox function sets up doLoad when processing in cli mode.
  * 
  * Copyright (c) 2015 Richard E. Price under the The MIT License.
  * A copy of this license can be found in the LICENSE.text file.
+ */
+
+class Response { // This class is used to format an output object.
+  public $stat;
+  public $author;
+  public $rpttext;
+}
+
+/* 
+ * function doLoad($zfile,$authorID,$webRoot,$ink,$report)
  * 
- * ------------------------
- * 
- * function loadBox($zfile,$authorID)
- * 
- * loadBox validates an input zip file, unzips it and uses its 
- * contents to create a game box or to modify an existing game box. 
+ * doLoad uses the contents of an input zip file 
+ * to create a game box or to modify an existing game box. 
  * It returns the output described below with a status and with 
  * optional report information to be emailed to the author.
  * 
- * Input is the zip file containing the game box and the authorID.
+ * Input:
+ *   $zipFileName - the name of the zip file to be loaded.
+ *   $zipFileLoc - the location of the zip file to be loaded.
+ *   $authorID - the player ID of the submitter of the game box.
+ *   $webRoot - the root of the Board18 web site being loaded to.
+ *   $link - the mysqli_connect link for the BOARD18 database.
+ *   $report - a response class structure to be used for the output.
  * 
- * Output is the following stringified JSON data structure [object]. 
+ * Output is the following stringified JSON data structure 
+ * which is created from an instance of the Response class: 
  *   {
- *     "stat":"success"||"fail"||"nofile"||"toobig"||"email",
- *     "author":authorLogin
+ *     "stat":"success"||"fail"||"email",
+ *     "author":"authorLogin",
  *     "rpttext":
  *     [
  *       "textline"
@@ -30,79 +48,34 @@
  *   }
  */
  
-
-function loadBox($zfile,$authorID) {
-  class Response
-  {
-    public $stat;
-    public $rpttext;
-  }
-
+function doLoad($zipFileName,$zipFileLoc,$authorID,$webRoot,$link,$report) {
   // set up fail return object.
   $errorResp = new Response();
   $errorResp->stat = "fail";
   $errResp = json_encode($errorResp);
 
-  require_once('config.php');
-
-
-  $link = @mysqli_connect(DB_HOST, DB_USER, 
-          DB_PASSWORD, DB_DATABASE);
-  if (mysqli_connect_error()) {
-    $logMessage = 'MySQL Error 0: ' . mysqli_connect_error();
-    error_log($logMessage);
-    return $errResp;
-  }
-  mysqli_set_charset($link, "utf-8");
-  
   // Lookup author login in database.
   $qry0 = "SELECT login FROM players 
            WHERE player_id = '$authorID';"; 
   $result0 = mysqli_query($link, $qry0);
   if (!$result0) {
-    $logMessage = 'MySQL Error 1: ' . mysqli_error($link);
+    $logMessage = 'doLoad: MySQL Error 1: ' . mysqli_error($link);
     error_log($logMessage);
     return $errResp;
   }
   if (mysqli_num_rows($result0) === 1) { // Author exists.
     $arr0 = mysqli_fetch_array($result0);
-    $authorLogin = $arr0[0]; // login
+    $report-> author = $arr0[0]; // login
   } else { // Author does not exists - this should never happen.
-    $logMessage = 'MySQL Error 1: Author not found! ';
+    $logMessage = 'doLoad: MySQL Error 1: Author not found! ';
     error_log($logMessage);
     return $errResp;
   }
 
-  // get uploaded file information.
-  $zfileName = $_FILES["zfile"]["name"]; // The file name
-  $zfileTmpLoc = $_FILES["zfile"]["tmp_name"];
-  $zfileType = $_FILES["zfile"]["type"];
-  $zfileSize = $_FILES["zfile"]["size"];
-  if (!$zfileTmpLoc) {
-    $fileResp = new Response();
-    if (!$zfileName) {
-      $fileResp->stat = "nofile"; // no zip file [shouldn't happen]
-    } else {
-      $fileResp->stat = "toobig"; // zip file is too big.
-    }
-    $fr = json_encode($fileResp);
-    return "$fr";
-  }
-  $report = new Response();
-  $report->stat = "success";
-  $report->author = $authorLogin;
-  $report->rpttext = [];
-  $report->rpttext[] = "ZIP file was uploaded successfully.";
-  $report->rpttext[] = "  file name = " . $zfileName;
-  $report->rpttext[] = "  file type = " . $zfileType;
-  $report->rpttext[] = "  file size = " . $zfileSize;
-  $report->rpttext[] = "  file temp = " . $zfileTmpLoc;
-  $report->rpttext[] = "  ";
-
   // Get file name and test for valid extension [.zip].
-  $dirAlength = strpos($zfileName,'.zip');
+  $dirAlength = strpos($zipFileName,'.zip');
   if ($dirAlength) {
-    $dirAname = 'board18' . substr($zfileName,7,$dirAlength-7);
+    $dirAname = 'board18' . substr($zipFileName,7,$dirAlength-7);
     $dirBname = substr($dirAname,8);
   } else { // process error and return
     $report->rpttext[] = "Invalid extension on uploaded file.";
@@ -113,12 +86,12 @@ function loadBox($zfile,$authorID) {
   }
 
   // Unzip the uploaded Zip file.
-  $extractTmpLoc = $zfileTmpLoc . 'extract/';
+  $extractTmpLoc = $zipFileLoc . 'extract/';
   $zipfile = new ZipArchive;
-  if (($zipfile->open($zfileTmpLoc)) &&
+  if (($zipfile->open($zipFileLoc)) &&
       ($zipfile->extractTo($extractTmpLoc)) &&
       ($zipfile->close())) {
-    $report->rpttext[] = "Unzip of uploaded file was successful.";
+    $report->rpttext[] = "Unzip of zip file was successful.";
     $files1 = scandir($extractTmpLoc);
     foreach ($files1 as $line1) {
       if (($line1 !== ".") && ($line1 !== "..")) {
@@ -134,12 +107,7 @@ function loadBox($zfile,$authorID) {
     }
     $report->rpttext[] = "  ";
   } else {
-    $report->rpttext[] = "Unzip of uploaded file failed.";
-    $report->rpttext[] = "  temp directory structure:";
-    $files2 = scandir('/tmp/');
-    foreach ($files2 as $line2) {
-      $report->rpttext[] = "    " . $line2;
-    }
+    $report->rpttext[] = "Unzip of zip file failed.";
     $report->rpttext[] = "  ";
     $report->rpttext[] = "Game box not created.";
     $report->stat = "email";
@@ -201,14 +169,14 @@ function loadBox($zfile,$authorID) {
   $report->rpttext[] = "  ";
 
 // check for backup directory 
-  $backtmp = $_SERVER['DOCUMENT_ROOT'] . '/backups/';
+  $backtmp = $webRoot . '/backups/';
   $backdir = preg_replace('%//%', '/', $backtmp);
   if (!is_dir ($backdir)) { // need to create backup directory
     $report->rpttext[] = "Backup directory for images does not exist.";
     if (!mkdir ($backdir, $mode = 0755)) { 
       $report->rpttext[] = "The attempt to create a directory named ";
       $report->rpttext[] = "   " . $backdir . "  failed.";
-      $report->rpttext[] = "Make sure that www_data has update access";
+      $report->rpttext[] = "Make sure that user has update access";
       $report->rpttext[] = "to the parent directory. ";
       $report->rpttext[] = "Game box not created.";
       $report->stat = "email";
@@ -224,9 +192,7 @@ function loadBox($zfile,$authorID) {
 // Prepare to move image directory.
   $backdate = date("ymdhis");
   $imageback = $backdir . $dirBname . '-' . $backdate;
-  $scriptname = $_SERVER['SCRIPT_FILENAME'];
-  $scriptprefix = str_replace("board18BoxLoad.php","",$scriptname);
-  $imagedest = $scriptprefix . 'images/' . $dirBname;
+  $imagedest = $webRoot . '/images/' . $dirBname;
   if (file_exists ($imagedest)) { // Need to backup old images.
     if (!rename($imagedest,$imageback)) { // Backup failed
       $report->rpttext[] = "Existing image directory backup failed."; 
@@ -240,14 +206,16 @@ function loadBox($zfile,$authorID) {
   }
 
 // Move image directory.
-  exec("mv ".escapeshellarg($images)." ".escapeshellarg($imagedest), $exrtn);
-  if (!$exrtn) {
+  $mvcommand = "mv ".escapeshellarg($images)." ".escapeshellarg($imagedest);
+  exec($mvcommand, $mvoutput, $exrtn);
+  if (!$exrtn) { 
     $report->rpttext[] = "Image directory move succeeded.";  
     $report->rpttext[] = "  ";
   } else {
     $report->rpttext[] = "Image directory move failed.";  
     $report->rpttext[] = "  source name = " . $images;
     $report->rpttext[] = "  target name = " . $imagedest;
+    $report->rpttext[] = "  return code = " . $exrtn;
     $report->rpttext[] = "Game box not created.";
     $report->stat = "email";
     $fr = json_encode($report);
@@ -259,7 +227,7 @@ function loadBox($zfile,$authorID) {
            WHERE bname = '$bname' AND version = '$ver';"; 
   $result1 = mysqli_query($link, $qry1);
   if (!$result1) {
-    $logMessage = 'MySQL Error 2: ' . mysqli_error($link);
+    $logMessage = 'doLoad: MySQL Error 2: ' . mysqli_error($link);
     error_log($logMessage);
     rename($imageback,$imagedest); // Backout image change.
     return $errResp;
@@ -274,7 +242,7 @@ function loadBox($zfile,$authorID) {
        WHERE box_id = '$boxid';";
     $result2 = mysqli_query($link, $qry2);
     if (!$result2) {   // If query failed
-      $logMessage = 'MySQL Error 3: ' . mysqli_error($link);
+      $logMessage = 'doLoad: MySQL Error 3: ' . mysqli_error($link);
       error_log($logMessage);
       rename($imageback,$imagedest); // Backout image directory change.
       return $errResp;
@@ -287,7 +255,7 @@ function loadBox($zfile,$authorID) {
              author = '$auth',json_text = '$jsonstring';";
     $result3 = mysqli_query($link, $qry3);
     if (!$result3) {   // If query failed
-      $logMessage = 'MySQL Error 4: ' . mysqli_error($link);
+      $logMessage = 'doLoad: MySQL Error 4: ' . mysqli_error($link);
       error_log($logMessage);
       unlink ($imagedest); // Backout image directory change.
       return $errResp;
@@ -296,7 +264,7 @@ function loadBox($zfile,$authorID) {
              WHERE box_id = LAST_INSERT_ID();";
     $result4 = mysqli_query($link, $qry4);
     if (!$result4) {   // If query failed
-      $logMessage = 'MySQL Error 5: ' . mysqli_error($link);
+      $logMessage = 'doLoad: MySQL Error 5: ' . mysqli_error($link);
       error_log($logMessage);
       unlink ($imagedest); // Backout image directory change.
       return $errResp;
@@ -304,7 +272,7 @@ function loadBox($zfile,$authorID) {
     $qry5 = "SELECT LAST_INSERT_ID();";
     $result5 = mysqli_query($link, $qry5);
     if (!$result5 || (mysqli_num_rows($result5) !== 1)) {
-      $logMessage = 'MySQL Error 6: ' . mysqli_error($link);
+      $logMessage = 'doLoad: MySQL Error 6: ' . mysqli_error($link);
       error_log($logMessage);
       unlink ($imagedest); // Backout image directory change.
       return $errResp;
@@ -317,4 +285,105 @@ function loadBox($zfile,$authorID) {
   $fr = json_encode($report);
   return "$fr";
 }
-?>
+
+/* 
+ * function loadBox($zfile,$authorID)
+ * 
+ * loadBox validates an input zip file and sets 
+ * up the connection that doLoad will use for data base access.
+ * It then calls doLoad to actually create the game box. 
+ * It returns the output described below with a status and with 
+ * optional report information to be emailed to the author.
+ * 
+ * Input:
+ *   $zfile - the zip file containing the game box to be loaded.
+ *   $authorID - the player ID of the submitter of the game box.
+ * 
+ * Output is the following stringified JSON data structure 
+ * which is created from an instance of the Response class: 
+ *   {
+ *     "stat":"success"||"fail"||"nofile"||"toobig"||"email",
+ *     "author":"authorLogin",
+ *     "rpttext":
+ *     [
+ *       "textline"
+ *       "textline"
+ *       "textline"
+ *        . . . . .
+ *     ]
+ *   }
+ */
+function loadBox($zfile,$authorID) {
+  
+  $errorResp = new Response(); // set up fail return object.
+  $errorResp->stat = "fail";
+  $errResp = json_encode($errorResp);
+
+  // validate uploaded file information.
+  $zfileName = $_FILES["zfile"]["name"]; // The file name
+  $zfileTmpLoc = $_FILES["zfile"]["tmp_name"];
+  $zfileType = $_FILES["zfile"]["type"];
+  $zfileSize = $_FILES["zfile"]["size"];
+  if (!$zfileTmpLoc) {
+    $fileResp = new Response();
+    if (!$zfileName) {
+      $fileResp->stat = "nofile"; // no zip file [shouldn't happen]
+    } else {
+      $fileResp->stat = "toobig"; // zip file is too big.
+    }
+    $fr = json_encode($fileResp);
+    return "$fr";
+  }
+  $report = new Response();
+  $report->stat = "success";
+  $report->rpttext = [];
+  $report->rpttext[] = "ZIP file was uploaded successfully.";
+  $report->rpttext[] = "  file name = " . $zfileName;
+  $report->rpttext[] = "  file type = " . $zfileType;
+  $report->rpttext[] = "  file size = " . $zfileSize;
+  $report->rpttext[] = "  file temp = " . $zfileTmpLoc;
+  $report->rpttext[] = "  ";
+
+  // Set up database access.
+  require_once('config.php');
+  $link = mysqli_connect(DB_HOST, DB_USER,DB_PASSWORD, DB_DATABASE);
+  if (mysqli_connect_error()) {
+    $logMessage = 'MySQL Error 0: ' . mysqli_connect_error();
+    error_log($logMessage);
+    return $errResp;
+  }
+  mysqli_set_charset($link, "utf-8");
+
+  $webRoot = $_SERVER['DOCUMENT_ROOT'];
+  $retrn = doLoad($zfileName,$zfileTmpLoc,$authorID,$webRoot,$link,$report);
+  return $retrn;
+}
+
+/* 
+ * function nextBox($zfile,$authorID,$cliRoot)
+ * 
+ * nextBox  . . . .
+ * It then calls doLoad to actually create the game box. 
+ * It returns the output described below with a status and with 
+ * optional report information to be emailed to the author.
+ * 
+ * Input:
+ *   $zfile - the zip file containing the game box to be loaded.
+ *   $authorID - the player ID of the submitter of the game box.
+ *   $cliRoot - only from massLoadBox - root 0f Board18 instance.
+ *   $cliLink - only from massLoadBox - mysqli_connect for database.
+ * 
+ * Output is the following stringified JSON data structure [object]: 
+ *   {
+ *     "stat":"success"||"fail"||"nofile"||"toobig"||"email",
+ *     "author":authorLogin
+ *     "rpttext":
+ *     [
+ *       "textline"
+ *       "textline"
+ *       "textline"
+ *        . . . . .
+ *     ]
+ *   }
+ */
+// to be supplied soon
